# PGD

HK/CH-HCNetSDKV6.1.9.48_build20230410_linux64/Demo示例/2-Java开发示例/1-预览回放下载/ClientDemo/src/com/NetSDKDemo/: ClientDemo.java  HCNetSDK.java  VideoDemo.java
HK/CH-HCNetSDKV6.1.9.48_build20230410_linux64/Demo示例/2-Java开发示例/2-报警布防监听/AlarmDemo/src/NetSDKDemo/: HCNetSDK.java
HK/CH-HCNetSDKV6.1.9.48_build20230410_linux64/Demo示例/2-Java开发示例/2-报警布防监听/AlarmDemo/src/alarm/: Alarm.java  AlarmDataParse.java
HK/CH-HCNetSDKV6.1.9.48_build20230410_linux64/Demo示例/2-Java开发示例/3-语音对讲转发/AudioDemo/src/test/: AudioTest.java  HCNetSDK.java
HK/CH-HCNetSDKV6.1.9.48_build20230410_linux64/Demo示例/2-Java开发示例/6-参数获取与配置/Demo/src/NetSDKDemo/: HCNetSDK.java
HK/CH-HCNetSDKV6.1.9.48_build20230410_linux64/Demo示例/2-Java开发示例/7-ISAPI协议透传/JavaDemo_STDXMLConfig/lib/: DeviceCfg.json
HK/CH-HCNetSDKV6.1.9.48_build20230410_linux64/Demo示例/3-Python开发示例/1-预览取流解码Demo/: PlayCtrl.py  test_main.py
HK/CH-HCNetSDKV6.1.9.48_build20230410_linux64/Demo示例/3-Python开发示例/2-报警布防Demo/: AlaemTest.py
HK/CH-HCNetSDKV6.1.9.48_build20230410_linux64/Demo示例/3-Python开发示例/3-报警监听Demo/: AlaemTest.py
HK/CH-HCNetSDKV6.1.9.48_build20230410_linux64/Demo示例/3-Python开发示例/4-网络协议透传Demo/: DemoTest.py  HCNetSDK.py
HK/QtDemo/Linux64/QtCreator/: QtClientDemo.pro
HK/QtDemo/Linux64/VsCode/: CMakeLists.txt
HK/QtDemo/Linux64/lib/: QtClientDemo
HK/QtDemo/deprecated/: CMakeLists.txt
HK/QtDemo/src/: main.cpp  qtclientdemo.cpp  qtclientdemo.h
HK/QtDemo/src/ExitModule/: exitdemo.h
HK/QtDemo/src/MainWindow/DeviceTree/AddNode/: addnode.h
HK/QtDemo/src/MainWindow/DeviceTree/ChannelAttr/: channelattr.h
HK/QtDemo/src/MainWindow/DeviceTree/DeviceAttr/: deviceattr.h
HK/QtDemo/src/MainWindow/LogAlarm/AlarmTable/: alarmtable.h
HK/QtDemo/src/MainWindow/LogAlarm/LogTable/: logtable.h
HK/QtDemo/src/ManageDevice/DeviceState/: devicestate.h
HK/QtDemo/src/ManageDevice/Format/: formatdisk.h
HK/QtDemo/src/ManageDevice/LogSearch/: logsearch.h
HK/QtDemo/src/ManageDevice/Reboot/: rebootdevice.h
HK/QtDemo/src/ManageDevice/Reset/: resetdevice.h
HK/QtDemo/src/ManageDevice/Shutdown/: shutdowndevice.h
HK/QtDemo/src/ManageDevice/Timing/: timing.h
HK/QtDemo/src/ManageDevice/Update/: remoteupdate.h
HK/QtDemo/src/OtherFunc/AudioBroadcast/: audiobroadcast.h
HK/QtDemo/src/OtherFunc/AudioIntercom/: audiointercom.h
HK/QtDemo/src/OtherFunc/AudioTransfer/: audiotransfer.h
HK/QtDemo/src/OtherFunc/Deployment/: deploy.h
HK/QtDemo/src/OtherFunc/DevicePan/: devicepan.h
HK/QtDemo/src/OtherFunc/ImportConfig/: importconfig.h
HK/QtDemo/src/OtherFunc/SerialTransfer/: serialtransfer.h
HK/QtDemo/src/ParaConfig/configure_params/: cconfigureparams.h  main.cpp
HK/QtDemo/src/ParaConfig/configure_params/HardDiskParams/: charddiskparams.cpp  charddiskparams.h
HK/QtDemo/src/ParaConfig/configure_params/IPParams/: cipparams.cpp  cipparams.h
HK/QtDemo/src/ParaConfig/configure_params/RemoteParams/: cremoteparams.h
HK/QtDemo/src/ParaConfig/configure_params/RemoteParams/ATMParams/: catmnetparams.h  catmparams.h
HK/QtDemo/src/ParaConfig/configure_params/RemoteParams/AlarmParams/: calarminhandletype.cpp  calarminhandletype.h  calarminptz.h  calarmparamsdlg.h
HK/QtDemo/src/ParaConfig/configure_params/RemoteParams/ChannelParams/: cchannelparams.h  cdlgremoterecordschedule.h  chidealarm.cpp  chidealarm.h  cmotion.cpp  cmotion.h  cshelter.cpp  cshelter.h  cvilost.cpp  cvilost.h
HK/QtDemo/src/ParaConfig/configure_params/RemoteParams/ExceptionParams/: exceptionparams.h
HK/QtDemo/src/ParaConfig/configure_params/RemoteParams/NetParams/: cadvancednetparams.h  ccompressaudio.h  cnfsparams.h  crtspparams.h  czonedst.h
HK/QtDemo/src/ParaConfig/configure_params/RemoteParams/SerialParams/: cpppcfgdlg.h  cserialparams.h
HK/QtDemo/src/ParaConfig/configure_params/RemoteParams/UserParams/: cuserparams.cpp  cuserparams.h
HK/QtDemo/src/PlayBack/: playback.cpp  playback.h
HK/QtDemo/src/RealPlay/: realplay.cpp  realplay.h
HK/QtDemo/src/RealPlay/PTZ/PtzCruise/: ptzcruise.h
HK/QtDemo/src/RealPlay/PTZ/PtzPreset/: ptzpreset.h
HK/qt_vscode_test/: CMakeLists.txt
HK/qt_vscode_test/src/: mainwindow.cpp
HK/qt_vscode_test/ui/: mainwindow.ui
